--- a/index.html
+++ b/index.html
@@ -18,9 +18,35 @@
 	</head>
 
 	<body>
-		<div class="alert alert-primary" role="alert">
-			A simple primary alert—check it out!
-		</div>
+		<nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">Bondi</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+						
+					</ul>
+					
+				</div>
+			</div>
+		</nav>
+
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/all.min.js"></script>
 	</body>
