Adding Header + Landing Section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,67 @@
 	</head>
 
 	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg">
+				<div class="container">
+					<a class="navbar-brand" href="#"
+						><img src="imgs/logo.png" alt="Bondi"
+					/></a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#phone_navbar"
+						aria-controls="phone_navbar"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<i class="fa-solid fa-bars"></i>
+					</button>
+					<div class="collapse navbar-collapse" id="phone_navbar">
+						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="nav-link active p-lg-3" aria-current="page" href="#"
+									>Home</a
+								>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link p-lg-3" href="#services">services</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link p-lg-3" href="#portfolio">portfolio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link p-lg-3" href="#about">about</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link p-lg-3" href="#contact">contact</a>
+							</li>
+						</ul>
+						<div class="search pe-lg-3 ps-lg-3 d-none d-lg-block">
+							<i class="fa-solid fa-magnifying-glass"></i>
+						</div>
+						<a href=""
+							><button class="btn main-btn rounded-pill ms-lg-3">
+								Login
+							</button></a
+						>
+					</div>
+				</div>
+			</nav>
+		</header>
+		<section
+			class="landing d-flex flex-column align-items-center justify-content-center"
+		>
+			<h1 class="mb-3 text-light">Taste the creativity</h1>
+			<p class="text-white-50 fs-8">We make awesome graphic and web design</p>
+			<button class="btn main-btn rounded-pill ms-lg-3">Get Started</button>
+		</section>
+		<section class="features">
+			<div class="section-title">
+				<img src="imgs/title.png" alt="title">
+			</div>
+		</section>
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/all.min.js"></script>
 	</body>
