--- a/index.html
+++ b/index.html
@@ -75,10 +75,58 @@
 			<button class="btn main-btn rounded-pill ms-lg-3">Get Started</button>
 		</section>
 		<section class="features">
-			<div class="section-title">
-				<img src="imgs/title.png" alt="title">
+			<div
+				class="section-title mb-3 d-flex flex-column align-items-center justify-content-center"
+			>
+				<img src="imgs/title.png" alt="title" class="mb-3" />
+				<h2>We are good at</h2>
+				<p class="text-dark-50 pb-3">some of these stuff under</p>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg col-sm-12 feature">
+						<div class="number d-flex justify-content-center">
+							<span>1</span>
+							<i class="fa-solid fa-pen"></i>
+						</div>
+						<div class="feature-info text-center">
+							<h3>Graphic design</h3>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Tempora cumque, nobis vitae adipisci eum cum praesentium
+							</p>
+						</div>
+					</div>
+					<div class="col-lg col-sm-12 feature">
+						<div class="number d-flex justify-content-center">
+							<span>2</span>
+							<i class="fa-solid fa-tv"></i>
+						</div>
+						<div class="feature-info text-center">
+							<h3>Graphic design</h3>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Tempora cumque, nobis vitae adipisci eum cum praesentium
+							</p>
+						</div>
+					</div>
+					<div class="col-lg col-sm-12 feature">
+						<div class="number d-flex justify-content-center">
+							<span>3</span>
+							<i class="fa-solid fa-plug"></i>
+						</div>
+						<div class="feature-info text-center">
+							<h3>Graphic design</h3>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Tempora cumque, nobis vitae adipisci eum cum praesentium
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
+
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/all.min.js"></script>
 	</body>
