--- a/index.html
+++ b/index.html
@@ -126,6 +126,52 @@
 				</div>
 			</div>
 		</section>
+		<section class="work cyan">
+			<div
+				class="section-title mb-3 d-flex flex-column align-items-center justify-content-center"
+			>
+				<img src="imgs/title.png" alt="title" class="mb-3" />
+				<h2>We make this</h2>
+				<p class="text-dark-50 pb-3">Prepare to be amazed</p>
+			</div>
+			<div class="buttons text-center mb-5">
+				<button class="btn main-btn rounded-pill">All</button>
+				<button class="btn second-btn rounded-pill">Design</button>
+				<button class="btn second-btn rounded-pill">Code</button>
+				<button class="btn second-btn rounded-pill">Photo</button>
+				<button class="btn second-btn rounded-pill">App</button>
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-01.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-02.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-03.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-04.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-05.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-06.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-07.jpg" alt="work" class="img-fluid"/>
+					</div>
+					<div class="col-lg-3 col-md-6 col-sm-12 mb-3" data-work="App">
+						<img src="imgs/work-08.jpg" alt="work" class="img-fluid"/>
+					</div>
+			</div>
+			<div class="btn-holder text-center mt-5">
+				<button class="btn main-btn rounded-pill">I want more</button>
+			</div>
+		</section>
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/all.min.js"></script>
 	</body>
