Adding Team Section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<div class="section-title mb-3 d-flex flex-column align-items-center justify-content-center">
 			<img src="imgs/title.png" alt="title" class="mb-3" />
 			<h2>We are good at</h2>
-			<p class="text-dark-50 pb-3">some of these stuff under</p>
+			<p class="text-black-50 pb-3">some of these stuff under</p>
 		</div>
 		<div class="container">
 			<div class="row">
@@ -111,7 +111,7 @@
 		<div class="section-title mb-3 d-flex flex-column align-items-center justify-content-center">
 			<img src="imgs/title.png" alt="title" class="mb-3" />
 			<h2>We make this</h2>
-			<p class="text-dark-50 pb-3">Prepare to be amazed</p>
+			<p class="text-black-50 pb-3">Prepare to be amazed</p>
 		</div>
 		<div class="buttons text-center mb-5">
 			<button class="btn main-btn rounded-pill">All</button>
@@ -155,21 +155,21 @@
 		<div class="section-title mb-3 d-flex flex-column align-items-center justify-content-center">
 			<img src="imgs/title.png" alt="title" class="mb-3" />
 			<h2>Some stuff about us</h2>
-			<p class="text-dark-50 pb-3">The grat team</p>
+			<p class="text-black-50 pb-3">The grat team</p>
 		</div>
-		<p class="text-center text-dark-50 m-auto mb-5">
+		<p class="text-center text-black-50 m-auto mb-5">
 			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos necessitatibus nostrum unde, quasi facere quos vel
 			mollitia natus.
 		</p>
 		<div class="container">
-			<div class="row">
+			<div class="row text-align-center">
 				<div class="col-lg-6 col-sm-12 text-center text-lg-start">
-					<h2 class="fw-bold">Ratina Design</h2>
-					<p class="text-dark-50">
+					<h2 class="fw-bold mb-4">Ratina Design</h2>
+					<p class="text-black-50">
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos necessitatibus nostrum unde, quasi facere quos
 						vel mollitia natus.
 					</p>
-					<p class="text-dark-50">
+					<p class="text-black-50">
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos necessitatibus nostrum unde, quasi facere quos
 						vel mollitia natus.
 					</p>
@@ -178,6 +178,49 @@
 					</div>
 				</div>
 				<div class="col-lg-6 col-sm-12"><img src="imgs/laptop.png" alt="About" class="img-fluid"></div>
+			</div>
+		</div>
+	</section>
+	<section class="team cyan">
+		<div class="container text-center">
+			<h2 class="fw-bold text-capitalize">Meet the team</h2>
+			<p class="text-black-50 mb-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, perspiciatis. Amet
+				consectetur cum velit.
+				Quod deserunt ducimus quaerat nulla modi dolorem, quis asperiores mollitia? Placeat, inventore eveniet! Nisi,
+				ratione officia.</p>
+			<div class="row">
+				<div class="col-md-6 col-lg-3 mb-3 box">
+					<div class="box bg-white">
+						<img src="imgs/team-1.png" alt="team" class="img-fluid">
+						<h3 class="p-3 fw-bold">Luke Skywalker</h3>
+						<p class="p-3 text-black-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime.
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-3 box">
+					<div class="box bg-white">
+						<img src="imgs/team-2.png" alt="team" class="img-fluid">
+						<h3 class="p-3 fw-bold">Luke Skywalker</h3>
+						<p class="p-3 text-black-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime.
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-3 box">
+					<div class="box bg-white">
+						<img src="imgs/team-3.png" alt="team" class="img-fluid">
+						<h3 class="p-3 fw-bold">Luke Skywalker</h3>
+						<p class="p-3 text-black-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime.
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 mb-3 box">
+					<div class="box bg-white">
+						<img src="imgs/team-4.png" alt="team" class="img-fluid">
+						<h3 class="p-3 fw-bold">Luke Skywalker</h3>
+						<p class="p-3 text-black-50">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime.
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
