Adding Techs And Project Sections

--- a/index.html
+++ b/index.html
@@ -224,9 +224,38 @@
 			</div>
 		</div>
 	</section>
-
-
-
+	<section class="techs">
+		<div class="container">
+			<div class="row text-center align-items-center">
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-1.png" alt="tech">
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-2.png" alt="tech">
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-3.png" alt="tech">
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-4.png" alt="tech">
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-1.png" alt="tech">
+				</div>
+				<div class="col-lg-2 col-md-4 col-sm-6 mt-3 mb-3">
+					<img src="imgs/tech-2.png" alt="tech">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="project">
+		<div class="container text-center">
+			<h2 class="fw-bold text-white text-capitalize mb-3">Start your project now</h2>
+			<p class="text-white-50 mb-5">Leave your description and we start the engine. Don't worry, you can cancel anytime
+			</p>
+			<button class="btn main-btn mb-5 rounded-pill text-capitalize ps-5 pe-5">Start project</button>
+		</div>
+	</section>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/all.min.js"></script>
 </body>
