Adding Blogs Sections

--- a/index.html
+++ b/index.html
@@ -256,6 +256,47 @@
 			<button class="btn main-btn mb-5 rounded-pill text-capitalize ps-5 pe-5">Start project</button>
 		</div>
 	</section>
+	<section class="blogs">
+		<div class="section-title mb-3 d-flex flex-column align-items-center justify-content-center">
+			<img src="imgs/title.png" alt="title" class="mb-3" />
+			<h2>read our blogs</h2>
+			<p class="text-black-50 pb-3">new stories</p>
+		</div>
+		<div class="container">
+			<div class="row mb-5 text-md-start text-center">
+				<div class="col-lg-4 col-md-6 mb-3">
+					<div class="card">
+						<img src="imgs/blog-1.jpg" alt="blog" class="card-img-top">
+						<div class="card-body">
+							<span class="date text-black-50 p-2">Jan 17, 2022</span>
+							<h5 class="p-2 fw-bold">Some awesome blog title here</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 mb-3">
+					<div class="card">
+						<img src="imgs/blog-2.jpg" alt="blog" class="card-img-top">
+						<div class="card-body">
+							<span class="date text-black-50 p-2">Jan 17, 2022</span>
+							<h5 class="p-2 fw-bold">Some awesome blog title here</h5>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 mb-3">
+					<div class="card">
+						<img src="imgs/blog-3.jpg" alt="blog" class="card-img-top">
+						<div class="card-body">
+							<span class="date text-black-50 p-2">Jan 17, 2022</span>
+							<h5 class="p-2 fw-bold">Some awesome blog title here</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="btn-holder text-center">
+				<button class="btn main-btn mb-5 rounded-pill text-capitalize ps-5 pe-5">more stories</button>
+			</div>
+		</div>
+	</section>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/all.min.js"></script>
 </body>
