Adding Newsletter Sections

--- a/index.html
+++ b/index.html
@@ -297,6 +297,29 @@
 			</div>
 		</div>
 	</section>
+	<section class="newsletter p-4">
+		<div class="container pt-4">
+			<div class="row align-items-center">
+				<div class="col-lg-4">
+					<p class="fw-bold text-center text-lg-end">Subscribe to our Newsletter:</p>
+				</div>
+				<div class="col-lg-8">
+					<form class="row align-items-start">
+						<div class="col-lg-10 mb-3">
+							<div class="mb-3">
+								<input type="email" class="form-control text-center text-lg-start" id="exampleInputEmail1"
+									aria-describedby="emailHelp" placeholder="Enter Email Adress">
+							</div>
+						</div>
+						<div class="col-lg-2 text-center">
+							<button type="submit" class="btn main-btn rounded-pill">Subscribe</button>
+						</div>
+					</form>
+				</div>
+			</div>
+
+		</div>
+	</section>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/all.min.js"></script>
 </body>
