--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos necessitatibus nostrum unde, quasi facere quos
 						vel mollitia natus.
 					</p>
-					<div class="btn-holder mt-5">
+					<div class="btn-holder mt-5 mb-5">
 						<button class="btn main-btn rounded-pill">Order me one</button>
 					</div>
 				</div>
@@ -317,9 +317,61 @@
 					</form>
 				</div>
 			</div>
-
 		</div>
 	</section>
+	<footer class="pt-5 pb-5">
+		<div class="container">
+			<div class="row text-white-50 text-md-start text-center">
+				<div class="col-lg-4 col-md-6 mb-4">
+					<a href=""><img src="imgs/logo.png" alt="logo" class="img-fluid mb-3"></a>
+					<p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ut quis veniam? Dolorum
+						laborum mollitia maiores velit alias obcaecati</p>
+					<p class="mb-1">Created by <span class="graph">Graphberry</span></p>
+					<p>&#169; 2022 - <span class="bondi">Bondi Inc</span></p>
+				</div>
+				<div class="col-lg-2 col-md-6 mb-4">
+					<h2 class="text-light fw-bold">Links</h2>
+					<ul class="navbar-nav">
+						<li><a href="#" class="nav-link">Home</a></li>
+						<li><a href="#" class="nav-link">Our Services</a></li>
+						<li><a href="#" class="nav-link">Portfolio</a></li>
+						<li><a href="#" class="nav-link">Testimonials</a></li>
+						<li><a href="#" class="nav-link">Support</a></li>
+						<li><a href="#" class="nav-link">Terms and Conditions</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 mb-4">
+					<h2 class="text-light fw-bold">About Us</h2>
+					<ul class="navbar-nav">
+						<li><a href="#" class="nav-link">Sign in</a></li>
+						<li><a href="#" class="nav-link">Register</a></li>
+						<li><a href="#" class="nav-link">About Us</a></li>
+						<li><a href="#" class="nav-link">Blog</a></li>
+						<li><a href="#" class="nav-link">Contact Us</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-6 mb-4">
+					<h2 class="text-light fw-bold">Contact Us</h2>
+					<p class="mb-5 mt-3">Get in touch with us via mail phone. We are waiting for call or message</p>
+					<button type="submit" class="btn main-btn rounded-pill w-100 ">graphberry@gmail.com</button>
+					<ul class="social d-flex list-unstyled gap-5 mt-5 justify-content-center justify-content-md-start">
+						<li>
+							<a href="#"><i class="fa-brands fa-facebook facebook"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-twitter twitter"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-linkedin linkedin"></i></a>
+						</li>
+						<li>
+							<a href="#"><i class="fa-brands fa-youtube youtube"></i></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/all.min.js"></script>
 </body>
